--- a/apps/bank-webhook/package.json
+++ b/apps/bank-webhook/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@repo/db": "*",
     "@types/express": "^4.17.21",
     "express": "^4.19.2",
     "nodemon": "^3.1.4"
